# nonebot-plugin-nailongremove

./: .pre-commit-config.yaml  LICENSE  Nailong(0.5122).pth  Nailong(0.7123).pth  PKG-INFO  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  pypi-publish.yml
data_handle/: create_to_metadata.py  image_data_handle.py  image_data_handle_self.py  sort.py  truncated.py
docker/: .env.prod  Dockerfile  README.md  onebot11.json  requirements.txt
docs/: tutorial.md  tutorial_en.md
i18n/: README_en.md
ipynb/: run_with_napcat.ipynb  run_with_napcat_en.ipynb
nonebot_plugin_nailongremove/: __init__.py  __version__.py  config.py  frame_source.py  handler.py  model.py  recall.py  utils.py
nonebot_plugin_nailongremove/model/: __init__.py  classification.py  common.py  model.py  target_detection.py  update.py  yolox_utils.py
nonebot_plugin_nailongremove/model/utils/: common.py
nonebot_plugin_nailongremove/uniapi/: __init__.py  mute.py  recall.py  yolox_utils.py
scripts/: pub_all.py  pyproject.toml  render.py  utils.py
scripts/src/: render.py  utils.py
