[project]
name = "nailong-workspace"
version = "0"
requires-python = "<4.0,>=3.9"
dependencies = []
license = { text = "MIT" }
readme = "README.md"

[dependency-groups]
packages = [
    "-e file:///${PROJECT_ROOT}/packages/nonebot-plugin-nailongremove-base#egg=nonebot-plugin-nailongremove-base",
    "-e file:///${PROJECT_ROOT}/packages/nonebot-plugin-nailongremove#egg=nonebot-plugin-nailongremove",
]
scripts = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
render = { call = "scripts.render:main" }
pub-all = { call = "scripts.pub_all:main" }
