[project]
name = "nailong-workspace"
version = "0"
requires-python = "<4.0,>=3.9"
dependencies = []
license = { text = "MIT" }
readme = "README.md"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/packages/nonebot-plugin-nailongremove-base#egg=nonebot-plugin-nailongremove-base",
    "-e file:///${PROJECT_ROOT}/packages/nonebot-plugin-nailongremove#egg=nonebot-plugin-nailongremove",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
install-scripts = { shell = "cd scripts && pdm install -G:all && cd .." }
render = { call = "scripts.src.render:main" }
pre-install = { composite = ["install-scripts", "render"] }
pub-all-pub = { call = "scripts.src.pub_all:main" }
pub-all = { composite = ["render", "pub-all-pub"] }
