[project]
name = "nailong-workspace"
version = "0"
requires-python = "<4.0,>=3.9"
dependencies = []
license = { text = "MIT" }
readme = "README.md"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    # pip
    "setuptools>=73.0.1",
    "pip>=24.2",
    # tools
    "basedpyright>=1.17.0",
    "ruff>=0.6.2",
    "pre-commit>=4.0.1",
    # deps
    "nonebot-adapter-discord>=0.1.8",
    "nonebot-adapter-dodo>=0.2.1",
    "nonebot-adapter-feishu>=2.6.0",
    "nonebot-adapter-kaiheila>=0.3.4",
    "nonebot-adapter-kritor>=0.3.2",
    "nonebot-adapter-mirai>=2.3.3",
    "nonebot-adapter-onebot>=2.4.5",
    "nonebot-adapter-qq>=1.5.2",
    "nonebot-adapter-red>=0.9.0",
    "nonebot-adapter-satori>=0.12.6",
    "nonebot-adapter-telegram>=0.1.0b18",
    "nonebot-adapter-tailchat>=0.1.0b12",
    # packages
    "-e file:///${PROJECT_ROOT}/packages/nonebot-plugin-nailongremove-base#egg=nonebot-plugin-nailongremove-base",
    "-e file:///${PROJECT_ROOT}/packages/nonebot-plugin-nailongremove#egg=nonebot-plugin-nailongremove",
]

[tool.pdm.scripts]
install-scripts = { shell = "cd scripts && pdm install -G:all && cd .." }
render = { call = "scripts.src.render:main" }
pre-install = { composite = ["install-scripts", "render"] }
pub-all-pub = { call = "scripts.src.pub_all:main" }
pub-all = { composite = ["render", "pub-all-pub"] }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.basedpyright]
pythonVersion = "3.9"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "standard"
reportShadowedImports = false
exclude = ["__pypackages__"]

[tool.ruff]
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
preview = true
ignore = [
    "B008",
    "B905",
    # "COM812",
    "E501",
    "F821",    # conflict with pyright
    "FBT001",
    "FBT002",
    "ISC001",
    "PERF203",
    "PGH003",
    "PLC04",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF029",
    "RUF100",
    "S101",
    "S311",
    "S404",
    "SIM117",
    "TRY002",
    "TRY003",
]
select = [
    "A",
    "ANN001",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "F",
    "FBT",
    "FLY",
    "FURB",
    "I",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PGH",
    # "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "TCH",
    "TRY",
    "YTT",
]

[tool.ruff.lint.isort]
combine-as-imports = true
detect-same-package = true
extra-standard-library = ["typing_extensions"]
split-on-trailing-comma = true
